# ghostwriter-cli

./: Cargo.toml
src/: main.rs
